--- a/app/src/main/res/anim/slide_out_down.xml
+++ b/app/src/main/res/anim/slide_out_down.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="150"
-    android:fromYDelta="0"
-    android:toYDelta="100%p" />
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="300"
+    android:fromAlpha="1.0"
+    android:toAlpha="0.0"
+    android:interpolator="@android:anim/decelerate_interpolator" />
