--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -19,7 +19,7 @@
             android:id="@+id/appLogoSplash"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/logo12" />
 
         <TextView
             android:layout_width="wrap_content"
